Correct quick-apply

--- a/application/views/internship/quick_apply.html
+++ b/application/views/internship/quick_apply.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="form-group">
                     <label>Phone</label>
-                    <input type="tel" name="phone" class="form-control" placeholder="Primary Phone" required="">
+                    <input type="text" name="phone" pattern="[7-9]{1}[0-9]{9}" maxlength="10" class="form-control" placeholder="Primary Phone" required="">
                     <span class="help-text">Companies may contact you directly</span>
                 </div>
                 {/if}
