--- a/application/views/layouts/navigation/admin.html
+++ b/application/views/layouts/navigation/admin.html
@@ -43,6 +43,7 @@
                 <ul class="nav nav-second-level">
                     <li><a href="/marketing/newsletterCreate">Create</a></li>
                     <li><a href="/marketing/newsletterManage">Manage</a></li>
+                    <li><a href="/marketing/message">Message</a></li>
                 </ul>
             </li>
             <li>
