--- a/application/views/marketing/message.html
+++ b/application/views/marketing/message.html
@@ -1,7 +1,6 @@
 <div id="page-wrapper">
     <div class="row col-lg-12">
-        <h1 class="page-header text-center">Send Message</h1>
-        {if isset($success)}
+        <h1 class="page-header text-center">Send Message</h1> {if isset($success)}
         <div class="alert alert-success alert-dismissible fade in" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
             Mail Sent <strong>Successfully!</strong> click <a href="/marketing/newsletterManage">here</a> for status
@@ -15,12 +14,12 @@
             <div class="form-group">
                 <label>Subject</label>
                 <input type="text" name="subject" class="form-control" maxlength="64" required="">
-                </div>
+            </div>
             <div class="form-group">
                 <label>Message Body</label>
                 <textarea name="message" class="form-control editor"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary pull-right">Schedule</button>
+            <button type="submit" class="btn btn-primary pull-right">Send</button>
         </form>
     </div>
 </div>
