--- a/application/views/employer/resources.html
+++ b/application/views/employer/resources.html
@@ -26,7 +26,7 @@
                                 var useSSL = "https:" == document.location.protocol;
                                 var js, where = d.getElementsByTagName(s)[0],
                                 js = d.createElement(s);
-                                js.src = (useSSL ? "https:" : "http:") +  "//assets.swiftintern.com/js/siwidget.js?organization_id={$employer->organization->id}";
+                                js.src = (useSSL ? "https:" : "http:") +  "//swiftintern.com/public/assets/js/siwidget.js?organization_id={$employer->organization->id}";
                                 try { where.parentNode.insertBefore(js, where); } catch (e) { if (typeof console !== "undefined" && console.log && e.stack) { console.log(e.stack); } }
                             }(document, "script"));
                             </script>
