--- a/application/views/internship/studentPartner.html
+++ b/application/views/internship/studentPartner.html
@@ -3,7 +3,7 @@
         <h1>
             Swiftintern Student Partner
             <span class="pull-right">
-                <img src="http://assets.swiftintern.com/images/others/sp.png" class="img-circle" width="200">
+                <img src="http://swiftintern.com/public/assets/images/others/sp.png" class="img-circle" width="200">
             </span>
         </h1>
         <p>
