--- a/application/views/resumes/index.html
+++ b/application/views/resumes/index.html
@@ -3,7 +3,7 @@
         <h1>
             Resume for Internship
             <span class="pull-right">
-                <img src="http://assets.swiftintern.com/images/resume/resume2.gif" class="thumbnail" width="200">
+                <img src="http://swiftintern.com/public/assets/images/resume/resume2.gif" class="thumbnail" width="200">
             </span>
         </h1>
         <p>
@@ -21,7 +21,7 @@
 <section class="container">
     <article class="row blog">
         <div class="col-lg-8">
-            <img src="http://assets.swiftintern.com/images/resume/selected.jpg" class="thumbnail text-center">
+            <img src="http://swiftintern.com/public/assets/images/resume/selected.jpg" class="thumbnail text-center">
         </div>
         <div class="col-lg-4">
             <div class="panel panel-primary">
