--- a/application/views/training/organize.html
+++ b/application/views/training/organize.html
@@ -1,4 +1,4 @@
-<header class="intro-header" style="background-image: url(http://assets.swiftintern.com/images/others/workshop.jpg);">
+<header class="intro-header" style="background-image: url(http://swiftintern.com/public/assets/images/others/workshop.jpg);">
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
