--- a/application/views/users/emails/applicationSelected.html
+++ b/application/views/users/emails/applicationSelected.html
@@ -1,4 +1,4 @@
-<img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
+<img src="http://swiftintern.com/public/assets/images/headerlogo.png" style="width:100%;"><br>
 Dear {$user->name},<br><br>
 I am glad to inform you that you have been selected for <a href="http://swiftintern.com/{echo $opportunity->type}/details/{echo Framework\StringMethods::url($opportunity->title)}/{echo $opportunity->id}">{$opportunity->title}</a>. <b>Congratulation's</b><br>
 <br>
