--- a/application/views/users/emails/employerRegister.html
+++ b/application/views/users/emails/employerRegister.html
@@ -1,4 +1,4 @@
-<img src="http://assets.swiftintern.com/images/headerlogo.png" style='width:100%;'><br>
+<img src="http://swiftintern.com/public/assets/images/headerlogo.png" style='width:100%;'><br>
 <br>
 Thank you for creating an SwiftIntern.com account, {$user->name}.<br>
 You or any team member who is managing your company page on linkedin can login any time.<br>
