--- a/application/views/users/emails/studentProfileComplete.html
+++ b/application/views/users/emails/studentProfileComplete.html
@@ -1,4 +1,4 @@
-<img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
+<img src="http://swiftintern.com/public/assets/images/headerlogo.png" style="width:100%;"><br>
 <br>
 We noticed you after registering with Swiftintern.com you aren't back. Swiftintern.com has over 1,000 internships and new opportunities are posted every single day! Don't know where to begin? Start your search by telling us your major.<br>
 Check out what a couple of recently hired students are saying about Swiftintern.com:<br>
