--- a/application/views/users/emails/studentRegister.html
+++ b/application/views/users/emails/studentRegister.html
@@ -1,4 +1,4 @@
-<img src="http://assets.swiftintern.com/images/headerlogo.png" style='width:100%;'><br>
+<img src="http://swiftintern.com/public/assets/images/headerlogo.png" style='width:100%;'><br>
 <br>
 {$user->name}, you have made a great decision! We dont need to tell you how critical an internship is to your future success - you already know.<br>
 Here are two easy ways for you to get started:<br>
