--- a/application/views/users/emails/studentTestCertification.html
+++ b/application/views/users/emails/studentTestCertification.html
@@ -1,4 +1,4 @@
-<img src="http://assets.swiftintern.com/images/newsletter/header.png" style="width:100%;"><br>
+<img src="http://swiftintern.com/public/assets/images/newsletter/header.png" style="width:100%;"><br>
 Hi {$user->name},<br>
 <br>
 <b>Congrats</b> for Successfully completing the test with passing marks, You scored {$marks} out of 100 on <b><a href="http://swiftintern.com/onlinetest/result/{$certificate->property_id}">{$test->title}</a></b><br>
@@ -6,7 +6,7 @@ Download Your <a href="http://swiftintern.com/onlinetest/certificate/{echo $cert
 <br>
 <b>Stand out and get contacted 6x times more often</b><br>
 Having certifications on your LinkedIn profile can help people find you for new opportunities. Members with certifications get contacted 6x more often, so add yours today!<br>
-<a href="{$link}"><img src="http://assets.swiftintern.com/images/newsletter/addtoprofile_cta.png" alt="LinkedIn Certification"></a>
+<a href="{$link}"><img src="http://swiftintern.com/public/assets/images/newsletter/addtoprofile_cta.png" alt="LinkedIn Certification"></a>
 <br>
 Good Luck,<br>
 Saud Akhtar<br>
