--- a/public/assets/css/custom-1.0.css
+++ b/public/assets/css/custom-1.0.css
@@ -2,7 +2,7 @@
 html, body{font-family:"Quicksand",Helvetica,Arial,sans-serif;color:#878787;}
 .sb-page-header {
     background-color: #b84d45;
-    background-image: url("http://assets.swiftintern.com/images/bg.png");
+    background-image: url("http://swiftintern.com/public/assets/images/bg.png");
     color: rgba(255, 255, 255, 0.8);
     font-size: 20px;
     margin-bottom: 40px;
