--- a/application/views/users/emails/applicationInternship.html
+++ b/application/views/users/emails/applicationInternship.html
@@ -1,4 +1,4 @@
-<img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
+<img src="http://swiftintern.com/public/assets/images/headerlogo.png" style="width:100%;"><br>
 Hi {$user->name},<br>
 <br>
 Your Application for <a href="http://swiftintern.com/{$opportunity->type}/details/{echo Framework\StringMethods::url($opportunity->title)}/{$opportunity->id}">{$opportunity->title}</a> at <a href="http://swiftintern.com/organization/company/{$company->id}">{$company->name}</a> has been <b>Submitted Successfully</b>. you can view the Application from your profile <a href="http://swiftintern.com/students/applications">Application Link</a><br>
