--- a/application/views/users/emails/applicationRejected.html
+++ b/application/views/users/emails/applicationRejected.html
@@ -1,4 +1,4 @@
-<img src="http://assets.swiftintern.com/images/headerlogo.png" style="width:100%;"><br>
+<img src="http://swiftintern.com/public/assets/images/headerlogo.png" style="width:100%;"><br>
 Dear {$user->name},<br><br>
 Your Application for <a href="http://swiftintern.com/{echo $opportunity->type}/details/{echo Framework\StringMethods::url($opportunity->title)}/{echo $opportunity->id}">{$opportunity->title}</a> has not been selected for the current year. 
 Apply next  time or you can apply to many other <a href="http://goo.gl/jee3wL">Internship</a> availabe on our sites. <br>
