--- a/application/views/users/emails/newsletter.html
+++ b/application/views/users/emails/newsletter.html
@@ -2,7 +2,7 @@
     <img src="http://swiftintern.com/users/track/newsletter/{echo $newsletter->id}">
     <img src="http://www.google-analytics.com/collect?v=1&tid=UA-49272936-3&cid=1&t=event&ec=email&ea=open&el=1&cs={echo $newsletter->user_group}&cm=email&cn=newsletter&cm1=1">
 {/if}
-<img src="http://assets.swiftintern.com/images/newsletter/header.png" style="width:100%;"><br>
+<img src="http://swiftintern.com/public/assets/images/newsletter/header.png" style="width:100%;"><br>
 <br>
 {$message->body}
 <br>
