Test Page Title

--- a/application/views/onlinetest/index.html
+++ b/application/views/onlinetest/index.html
@@ -14,7 +14,7 @@
         <div role="tabpanel">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs nav-justified" role="tablist">
-                <li role="presentation" class="active"><a href="#exam" aria-controls="intro" role="tab" data-toggle="tab">Available Certifications</a></li>
+                <li role="presentation" class="active"><a href="#exam" aria-controls="intro" role="tab" data-toggle="tab">Online Test</a></li>
                 <li role="presentation"><a href="#certification" aria-controls="profile" role="tab" data-toggle="tab">Online Certification Program</a></li>
             </ul>
 
