--- a/application/views/onlinetest/test.html
+++ b/application/views/onlinetest/test.html
@@ -1,5 +1,27 @@
 <!-- the middle contents -->
-<section class="container">
+<link rel="stylesheet" href="{echo CDN}css/syntax.css">
+<link rel="stylesheet" href="{echo CDN}css/main.css">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+<script src="http://cdn.rawgit.com/hilios/jQuery.countdown/2.1.0/dist/jquery.countdown.min.js"></script>
+<div class="home-welcome">
+<div class="container">
+    <div class="main-example">
+        <p>
+            Test Ends In:
+        </p>
+        <div class="countdown-container" id="main-example"></div>
+    </div>
+   <script type="text/template" id="main-example-template">
+    <div class="time <%= label %>">
+        <span class="count curr top"><%= curr %></span>
+        <span class="count next top"><%= next %></span>
+        <span class="count next bottom"><%= next %></span>
+        <span class="count curr bottom"><%= curr %></span>
+        <span class="label"><%= label.length < 6 ? label : label.substr(0, 3)  %></span>
+    </div>
+   </script>
+   <script type="text/javascript" src="{echo CDN}/js/timer.js"></script>
+
     <div class="row">
         <h1 class="page-header text-center">{echo $test->title}</h1>
         <ol class="breadcrumb">
@@ -41,7 +63,8 @@
             </form>
         </article>
     </div>
-</section>
+</div>
+</div>
 <script type="text/javascript">
 $(document).ready(function () {
     window.opts.ques = 1;
